--- a/.github/workflows/android2.yml
+++ b/.github/workflows/android2.yml
@@ -1,4 +1,7 @@
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - flutterflow
   
 # This workflow is triggered on pushes to the repository.
 # on: push    # Default will running for every branch.
